[package]
name = "rust-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2.9", features = ["js"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.86"
gloo = "0.8.0"
web-sys = { version = "0.3.64", features = ["CssStyleDeclaration", "DomTokenList", "Element", "HtmlElement", "Document", "Node", "AnimationEvent"]}
substring = "1.4.5"
num = "0.4.0"

