[package]
name = "rust-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2.9", features = ["js"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.86"
gloo = "0.8.0"
web-sys = { version = "0.3.64", features = ["CssStyleDeclaration", "DomTokenList", "Element", "HtmlElement", "Document", "Node", "NodeList", "AnimationEvent", "CssAnimation", "Animation", "AnimationPlayState", "KeyboardEvent"]}
hex_color = "2.0.0"
wasm-bindgen-futures = "0.4.37"
tokio = { version="1.29.0", features = ["sync"] }
lazy_static = "1.4.0"
js-sys = "0.3.64"

